policies/allow-dns-egress.yaml
# allow-l7-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-l7-frontend-to-backend
  namespace: nublenews
spec:
  endpointSelector:
    matchLabels:
      app: backend # Apply policy to the Backend pod
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: frontend # Allow traffic ONLY from the Frontend
      toPorts:
        - ports:
            - port: "3001"
              protocol: TCP
          # L7 Rules: Apply HTTP filtering
          rules:
            http:
              # Explicitly allow only GET requests to the /news path
              - method: "GET"
                path: "/news"
